--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     ]
   },
   "devDependencies": {
+    "axios": "^0.21.4",
     "gh-pages": "^3.2.3",
+    "googleapis": "^87.0.0",
+    "http2": "^3.3.7",
     "styled-components": "^5.3.1"
   },
   "moduleDirectories": [
